added some changes based on the reviews.

--- a/Personal Portfolio/8.index.html
+++ b/Personal Portfolio/8.index.html
@@ -9,22 +9,30 @@
     <header><h1>Welcome to My Portfolio</h1></header><hr>
     <nav>
         <ul>
-            <li><a href="#aboutme">About Me</a></li>
+            <li><a href="#about-me">About Me</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav><hr>
-    <section id="aboutme">
+    <section id="about-me">
         <h2>About Me</h2>
         <p><b>Bhagavathi</b> here!!!  <i>Post graduated in Embedded Systems. Pursuing a career in <b>web development. </b></i> Welcome to my personal blog.</p>
-        <img src="Myimage.jpg" alt="My-image" width="500px">
+        <img src="Myimage.jpg" alt="Photo of bhagavathi" width="500px">
     </section>
     <section id="projects">
         <h2>Projects</h2>
         <ul>
-            <li><a href="https://github.com/bhagavathi12/Mini-hackathon-1.git" target="_blank">Mini-hackathon-1</a></li>
-            <li><a href="https://github.com/bhagavathi12/React-assignments.git" target="_blank">React assignments</a></li>
-            <li><a href="https://github.com/bhagavathi12/todo_react.git" target="_blank">Todo list</a></li>
+            <li><h3>Mini-hacathon-1</h3>
+                <p>&nbsp;&nbsp;&nbsp;This hackathon aims to assess our UI knowledge. I designed this website based on the Figma model provided. Our task is to create a pixel-perfect design that matches the model. Here is the project link:<a href="https://github.com/bhagavathi12/Mini-hackathon-1.git" target="_blank">Mini-hackathon-1.</a></p>
+            </li>
+            <li>
+                <h3>React Assignments</h3>
+                <p>&nbsp;&nbsp;&nbsp;Here, there are multiple React tasks designed to help me gain knowledge from basic to advanced levels. These tasks have been assigned to me for learning React. Here is the link:<a href="https://github.com/bhagavathi12/React-assignments.git" target="_blank">React assignments</a></p>
+            </li>
+            <li>
+                <h3>Todo-list</h3>
+                <p>&nbsp;&nbsp;&nbsp;This is a to-do list project created using React.js. My mentor assigned this project to test my React knowledge. Here is the GitHub repository link: <a href="https://github.com/bhagavathi12/todo_react.git" target="_blank">Todo list</a></p>
+            </li>
         </ul>
     </section>
     <section id="contact">
@@ -38,7 +46,7 @@
         </p>
         <p>
             <label for="email">Email</label>
-            <input type="text" name="email" id="email">
+            <input type="email" name="email" id="email">
         </p>
         <p>
             <label for="message">Message</label><br>
