--- a/Simple Blog/index.html
+++ b/Simple Blog/index.html
@@ -23,7 +23,7 @@
             <h2><u>Welcome to My Blog</u></h2>
             <p style="text-align: justify;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  This blog is about web development.Web development involves creating and maintaining websites and web applications. It encompasses both front-end development, which focuses on the visual and interactive aspects users see in their browsers, and back-end development, which deals with server-side processes and databases. Web developers use a variety of programming languages and technologies, such as HTML, CSS, JavaScript, and server-side languages like Python or PHP. The goal is to build functional, user-friendly, and aesthetically pleasing web experiences. As technology evolves, web development continues to adapt, incorporating new tools and practices to enhance the online experience. </p>       
         </section>
-        <section id="blogposts">
+        <section id="posts">
             <h2><u>Blog Posts</u></h2>
             <ul>
                 <li><article>
