--- a/Basic structure/4.formatting-tags.html
+++ b/Basic structure/4.formatting-tags.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Formatting Tags</title>
 </head>
 <body>
     <h2>Formatting Tags</h2>
     <p>This is an example using <b>bold</b> <i>italic</i></p>
     <p>This text is <u>underlined</u></p>
     <p>This text has <s>strikethrough</s></p>
-    <p>This is <b>bold</b>,<i>italic</i>,<u>underlined</u>, and <s>strikethrough</s></p>
+    <p><b><i><u><s>This is bold,italic,underlined, and strikethrough</s></u></i></b></p>
 </body>
 </html>
