--- a/Basic structure/6.forms.html
+++ b/Basic structure/6.forms.html
@@ -9,9 +9,9 @@
     <h2>Basic Form</h2>
     <form action="#" method="post">
         <label for="name">Name</label>
-        <input type="text" name="name"><br>
+        <input type="text" name="name" id="name"><br>
         <label for="email">Email</label>
-        <input type="text" name="email"><br>
+        <input type="email" name="email" id="email"><br>
         <label for="message">Message</label><br>
         <textarea name="message" rows="4" cols="50"></textarea><br>
         <button type="submit">Submit</button>
