--- a/Basic structure/7.contact-form.html
+++ b/Basic structure/7.contact-form.html
@@ -8,17 +8,22 @@
 <body>
     <h2>Contact Form</h2>
     <form action="#" method="post">
-        <label>Full Name:</label>
-        <input type="text" name="fullname">
+        <label for="name">Full Name:</label>
+        <input type="text" name="fullname" id="name" required>
         <br>
-        <label>Email Address:</label>
-        <input type="text" name="email">
+        <label for="email">Email Address:</label>
+        <input type="email" name="email" id="email" required>
         <br>
-        <label>Gender</label>
-        <input type="radio" name="gender" value="male"> Male </input>
-        <input type="radio" name="gender" value="female"> Female </input><br>
-        <label>Subscribe to Newsletter</label>
-        <input type="checkbox" name="newsletter"><br>
+        <fieldset>
+            <legend>Gender</legend>
+            <input type="radio" name="gender" value="male" id="gender">
+            <label for="gender-male">Male</label>
+            <input type="radio" name="gender" value="female" id="gender"> 
+            <label for="gender-female">Female</label>
+        </fieldset>
+        <br>
+        <label for="news">Subscribe to Newsletter</label>
+        <input type="checkbox" name="newsletter" id="news" ><br>
         <button type="submit">Submit</button>
        
     </form>
